# sparkify-data-pipelines

./: .env.example  .flake8  README.md  pyproject.toml  script.sh
src/config/: __init__.py
src/dags/: final_project.py
src/iac/: decommissioning.py  provisioning.py
src/operators/: data_quality.py  load_dimension.py  load_fact.py  stage_redshift.py
src/sql/: create_tables.sql  insert_queries.py
